--- a/templates/pregled_zadatka.html
+++ b/templates/pregled_zadatka.html
@@ -25,9 +25,6 @@
         <a class="nav-link" href="#!kreirani_zadaci">Kreirani zadaci</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#!dovrseni_zadaci">Dovršeni zadaci</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="#!kalendar">Kalendar</a>
       </li>
     </ul>
@@ -100,7 +97,7 @@
           </div>
         </div>
         <div class="form-group komentiranje text-right">
-          <button class="btn btn-dark" ng-click="">
+          <button class="btn btn-dark" ng-click="modalKomentiranje()">
             <i class="fa fa-comments fa-lg" aria-hidden="true"></i>
           </button>
           <button
@@ -150,6 +147,43 @@
       <div class="modal-footer">
         <button type="submit" ng-click="DovrsiZadatak()" class="btn btn-dark">
           Potvrdi
+        </button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Zatvori
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Komentiranje -->
+<div class="modal fade" id="modalKomentiranje">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title w-100 text-center">Dodaj komentar</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <div class="modal-body">
+        <form name="NoviZadatakForm" method="POST">
+          <div class="form-group">
+            <label for="inputKomentar">Komentar</label>
+            <textarea
+              type="text"
+              class="form-control"
+              id="inputKomentar"
+              placeholder="..."
+              ng-model="komentar"
+              rows="3"
+            ></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" ng-click="Komentiranje()" class="btn btn-dark">
+          Objavi
         </button>
         <button type="button" class="btn btn-danger" data-dismiss="modal">
           Zatvori
