--- a/templates/kreirani_zadaci.html
+++ b/templates/kreirani_zadaci.html
@@ -281,14 +281,14 @@
           </div>
 
           <div class="form-group">
-            <label for="inputOpis">Opis</label>
-            <input
+            <label>Opis</label>
+            <textarea
               type="text"
               class="form-control"
-              id="inputOpis"
               placeholder="Opis"
               ng-model="regOpis"
-            />
+              rows="3"
+            ></textarea>
           </div>
         </form>
       </div>
