--- a/templates/pregled_zadatka.html
+++ b/templates/pregled_zadatka.html
@@ -54,7 +54,7 @@
   </div>
 </nav>
 
-<div class="sredinaUser" ng-init="PrikaziZasebniZadatak()">
+<div class="sredinaUser" ng-init="PrikaziZasebniZadatak(); PrikaziKomentare()">
   <div class="container-zadatak">
     <div
       ng-class="{'card': zadatak.stanje == 0, 'card-dovrsen':  zadatak.stanje == 1}"
@@ -110,6 +110,54 @@
         </div>
       </form>
     </div>
+  </div>
+
+  <div class="container-komentar">
+    <article class="align-top" ng-repeat="komentar in komentari">
+      <div class="text-center card_komentar">
+        <div class="card-body">
+          <div class="d-flex justify-content-between col-md-12">
+            <div class="komentar_kreator">
+              <h5>
+                <a href="" ng-click="DohvatiDrugogKorisnika(komentar.korisnik)"
+                  >{{komentar.korisnik}}</a
+                >
+              </h5>
+            </div>
+            <div>
+              <h5>
+                {{komentar.datum | date: 'dd-MM-yyyy' | promjenaFormata }}
+              </h5>
+            </div>
+          </div>
+
+          <div class="d-flex justify-content-start col-md-12">
+            <p class="komentar_opis">
+              {{komentar.opis}}
+            </p>
+          </div>
+
+          <div
+            class="d-flex justify-content-end col-md-12"
+            ng-if="komentar.korisnik == logiran"
+          >
+            <button
+              class="btn btn-dark"
+              style="margin-right: 10px;"
+              ng-click="UrediKomentarModal(komentar.id, komentar.opis)"
+            >
+              <i class="fa fa-pencil fa-lg" aria-hidden="true"></i>
+            </button>
+            <button
+              class="btn btn-dark"
+              ng-click="ObrisiKomentarModal(komentar.id, komentar.opis)"
+            >
+              <i class="fa fa-trash fa-lg" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </article>
   </div>
 </div>
 
@@ -182,8 +230,85 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="submit" ng-click="Komentiranje()" class="btn btn-dark">
+        <button
+          type="submit"
+          ng-click="Komentiranje(zadatak.id)"
+          class="btn btn-dark"
+        >
           Objavi
+        </button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Zatvori
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Uredi komentar -->
+<div class="modal fade" id="modalUrediKomentar">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title w-100 text-center">Uredi komentar</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+        <form name="NoviZadatakForm" method="POST">
+          <div class="form-group">
+            <label>Komentar</label>
+            <textarea
+              type="text"
+              class="form-control"
+              ng-model="edit_komentar_opis"
+              rows="3"
+            ></textarea>
+          </div>
+        </form>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="submit" ng-click="UrediKomentar()" class="btn btn-dark">
+          Uredi
+        </button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Zatvori
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Obrsi Komentar -->
+<div class="modal fade" id="modalObrisiKomentar">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title w-100 text-center">Brisanje komentara</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>
+          Jeste li sigurni da želite obrisati taj komentar?
+        </p>
+        <textarea
+          type="text"
+          class="form-control"
+          ng-model="delete_komentar_opis"
+          rows="3"
+          disabled
+        ></textarea>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" ng-click="ObrisiKomentar()" class="btn btn-dark">
+          Obriši
         </button>
         <button type="button" class="btn btn-danger" data-dismiss="modal">
           Zatvori
