--- a/templates/kreirani_zadaci.html
+++ b/templates/kreirani_zadaci.html
@@ -25,9 +25,6 @@
         <a class="nav-link" href="#!kreirani_zadaci">Kreirani zadaci</a
         ><span class="sr-only">(current)</span>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#!kalendar">Kalendar</a>
-      </li>
     </ul>
     <div class="dropdown">
       <button
@@ -138,11 +135,7 @@
         class="align-top"
         ng-repeat="zadatak in zadaci  | orderBy:orderProperty | filter: inputTekst "
       >
-        <div
-          class="text-center"
-          style="width: 25rem; height: 320px;"
-          ng-class="{'card': zadatak.stanje == 0, 'card-dovrsen':  zadatak.stanje == 1}"
-        >
+        <div class="text-center card" style="width: 25rem; height: 320px;">
           <div class="card-body">
             <div class="d-flex justify-content-center">
               <h5 class="zadatak_naziv text-center">
