--- a/templates/kreirani_zadaci_dovrseni.html
+++ b/templates/kreirani_zadaci_dovrseni.html
@@ -25,9 +25,6 @@
         <a class="nav-link" href="#!kreirani_zadaci">Kreirani zadaci</a
         ><span class="sr-only">(current)</span>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#!kalendar">Kalendar</a>
-      </li>
     </ul>
     <div class="dropdown">
       <button
@@ -139,9 +136,8 @@
         ng-repeat="zadatak in zadaci  | orderBy:orderProperty | filter: inputTekst "
       >
         <div
-          class="text-center"
+          class="text-center card-dovrsen"
           style="width: 25rem; height: 320px;"
-          ng-class="{'card': zadatak.stanje == 0, 'card-dovrsen':  zadatak.stanje == 1}"
         >
           <div class="card-body">
             <div class="d-flex justify-content-center">
