--- a/templates/moji_zadaci.html
+++ b/templates/moji_zadaci.html
@@ -26,9 +26,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#!kreirani_zadaci">Kreirani zadaci</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#!kalendar">Kalendar</a>
-      </li>
     </ul>
 
     <div class="dropdown">
@@ -129,11 +126,7 @@
         class="align-top"
         ng-repeat="zadatak in zadaci  | orderBy:orderProperty | filter: inputTekst "
       >
-        <div
-          class="text-center"
-          style="width: 25rem; height: 335px;"
-          ng-class="{'card': zadatak.stanje == 0, 'card-dovrsen':  zadatak.stanje == 1}"
-        >
+        <div class="text-center card" style="width: 25rem; height: 335px;">
           <div class="card-body">
             <div class="d-flex justify-content-center">
               <h5 class="zadatak_naziv text-center">
@@ -154,9 +147,9 @@
             <div class="row justify-content-start">
               <div class="zadatak_kreator">
                 Kreator:
-                <a href="" ng-click="DohvatiDrugogKorisnika(zadatak.kreator)"
-                  >{{zadatak.kreator}}</a
-                >
+                <a href="" ng-click="DohvatiDrugogKorisnika(zadatak.kreator)">
+                  {{zadatak.kreator}}
+                </a>
               </div>
             </div>
 
