--- a/templates/pregled_kreiranog_zadatka.html
+++ b/templates/pregled_kreiranog_zadatka.html
@@ -24,9 +24,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#!kreirani_zadaci">Kreirani zadaci</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#!kalendar">Kalendar</a>
-      </li>
     </ul>
 
     <div class="dropdown">
@@ -108,6 +105,13 @@
           </button>
           <button class="btn btn-dark" ng-click="ObrisiZadatakModal()">
             <i class="fa fa-trash fa-lg" aria-hidden="true"></i>
+          </button>
+          <button
+            ng-if="zadatak.stanje == 1"
+            class="btn btn-dark"
+            ng-click="VratiNaIzvrsavanjeModal()"
+          >
+            <i class="fa fa-undo fa-lg" aria-hidden="true"></i>
           </button>
         </div>
       </form>
@@ -404,6 +408,47 @@
       <div class="modal-footer">
         <button type="submit" ng-click="ObrisiKomentar()" class="btn btn-dark">
           Obriši
+        </button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Zatvori
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Vrati na izvrsavanje -->
+<div class="modal fade" id="modalVratiNaIzvrsavanje">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title w-100 text-center">Vrati na izvršavanje</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>
+          Potvrdite vraćanje zadatka <b>{{naziv_zadatka}}</b> u fazu
+          izvršavanja.
+        </p>
+        <label for="inputKomentar">Ostavite komentar:</label>
+        <textarea
+          type="text"
+          class="form-control"
+          id="inputKomentar"
+          placeholder="..."
+          ng-model="izvrsavanje_komentar"
+          rows="3"
+        ></textarea>
+      </div>
+      <div class="modal-footer">
+        <button
+          type="submit"
+          ng-click="VratiNaIzvrsavanje()"
+          class="btn btn-dark"
+        >
+          Potvrdi
         </button>
         <button type="button" class="btn btn-danger" data-dismiss="modal">
           Zatvori
