--- a/templates/login.html
+++ b/templates/login.html
@@ -2,12 +2,12 @@
   <!-- LIJEVO -->
   <div class="col-md-6 left">
     <img
-      src="http://localhost/Zadaci(FromBeginning)/assets/img/pozadina.jpeg"
+      src="http://localhost/Zadaci/assets/img/pozadina.jpeg"
       class="img-fluid"
       alt="Responsive image"
     />
     <img
-      src="http://localhost/Zadaci(FromBeginning)/assets/img/gif2.gif"
+      src="http://localhost/Zadaci/assets/img/gif2.gif"
       class="img-fluid"
       id="avocadoGif"
       alt="gif"
@@ -36,7 +36,6 @@
               placeholder="Lozinka"
               ng-model="pass"
             />
-            <!--<a class="forgot" href="#">Zaboravili ste lozinku?</a>-->
           </div>
           <div class="form-group col-md-2">
             <button type="submit" class="btn btn-dark" ng-click="Prijava()">
@@ -85,7 +84,6 @@
 <!-- The Modal -->
 <div class="modal fade" id="modalSignUp">
   <div class="modal-dialog modal-lg">
-    <!-- modal-dialog-centered na sredinu ekrana okomito -->
     <div class="modal-content">
       <!-- Modal Header -->
       <div class="modal-header">
@@ -176,39 +174,6 @@
               >
             </div>
           </div>
-          <!--
-          <fieldset class="form-group">
-            <div class="row">
-              <legend class="col-form-label col-sm-2 pt-0">Spol</legend>
-              <div class="col-sm-10">
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="gridRadios"
-                    id="gridRadios1"
-                    value="option1"
-                  />
-                  <label class="form-check-label" for="gridRadios1">
-                    Muško
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="gridRadios"
-                    id="gridRadios2"
-                    value="option2"
-                  />
-                  <label class="form-check-label" for="gridRadios2">
-                    Žensko
-                  </label>
-                </div>
-              </div>
-            </div>
-          </fieldset>
-          -->
           <div class="form-group">
             <label for="inputUsername">Korisničko ime</label>
             <input
