--- a/templates/postavke.html
+++ b/templates/postavke.html
@@ -57,7 +57,7 @@
       <div class="addpicture">
         <img
           class="slika"
-          src="http://localhost/Zadaci(FromBeginning)/assets/img/{{info.slika}}"
+          src="http://localhost/Zadaci/assets/img/{{info.slika}}"
           alt="avatar icon"
         />
       </div>
@@ -173,7 +173,7 @@
                 ng-click="novi_avatar('1.jpg', 'A')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/1.jpg"
+                  src="http://localhost/Zadaci/assets/img/1.jpg"
                   class="avatar"
                   alt="Avatar icon"
                 />
@@ -185,7 +185,7 @@
                 ng-click="novi_avatar('5.jpg', 'E')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/5.jpg"
+                  src="http://localhost/Zadaci/assets/img/5.jpg"
                   class="avatar"
                   alt="Avatar icon"
               /></a>
@@ -198,7 +198,7 @@
                 ng-click="novi_avatar('2.jpg', 'B')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/2.jpg"
+                  src="http://localhost/Zadaci/assets/img/2.jpg"
                   class="avatar"
                   alt="Avatar icon"
               /></a>
@@ -209,7 +209,7 @@
                 ng-click="novi_avatar('6.jpg', 'F')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/6.jpg"
+                  src="http://localhost/Zadaci/assets/img/6.jpg"
                   class="avatar"
                   alt="Avatar icon"
               /></a>
@@ -222,7 +222,7 @@
                 ng-click="novi_avatar('3.jpg', 'C')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/3.jpg"
+                  src="http://localhost/Zadaci/assets/img/3.jpg"
                   class="avatar"
                   alt="Avatar icon"
               /></a>
@@ -233,7 +233,7 @@
                 ng-click="novi_avatar('7.jpg', 'G')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/7.jpg"
+                  src="http://localhost/Zadaci/assets/img/7.jpg"
                   class="avatar"
                   alt="Avatar icon"
               /></a>
@@ -246,7 +246,7 @@
                 ng-click="novi_avatar('4.jpg', 'D')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/4.jpg"
+                  src="http://localhost/Zadaci/assets/img/4.jpg"
                   class="avatar"
                   alt="Avatar icon"
               /></a>
@@ -257,7 +257,7 @@
                 ng-click="novi_avatar('8.jpg', 'H')"
                 ><img
                   class="img-fluid avatar"
-                  src="http://localhost/Zadaci(FromBeginning)/assets/img/8.jpg"
+                  src="http://localhost/Zadaci/assets/img/8.jpg"
                   class="avatar"
                   alt="Avatar icon"
               /></a>
