--- a/templates/user.html
+++ b/templates/user.html
@@ -56,7 +56,7 @@
     <div class="picture">
       <img
         class="slika"
-        src="http://localhost/Zadaci(FromBeginning)/assets/img/{{info.slika}}"
+        src="http://localhost/Zadaci/assets/img/{{info.slika}}"
         alt="avatar icon"
       />
       <p class="d-flex justify-content-sm-around">{{info.korisnicko_ime}}</p>
